Modified html and css

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="col-xl-12 mt-5 pt-5"><h1><span>Trending Drops</span></h1></div>
         </div>
         <div class="row bg-dark align-items-center rounded-5">
-            <div class=" col-xl-3 mb-3 d-flex justify-content-center d-flex justify-content-center">
+            <div class=" col-xl-3 col-6  mb-3 d-flex justify-content-center d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                 <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/E-tMq_fWUAEyMpb.jpg" class="card-img-top rounded-5" alt="pink haired lady"></a>
@@ -116,7 +116,7 @@
               </div>
          </div>
 
-            <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+            <div class=" col-xl-3 col-6  mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                 <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/Dalmatian.jpg" class="card-img-top rounded-5" alt="two colored faced skin"></a>
@@ -127,7 +127,7 @@
               </div>
           </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/8fb0263867e3755c6b2ecce5e0a417fd.jpg" class="card-img-top rounded-5" alt="trunks titan"></a>
@@ -138,7 +138,7 @@
               </div>
           </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/E_rdFgsX0AQNO2U-1.jpg" class="card-img-top rounded-5" alt="masked on"></a>
@@ -149,7 +149,7 @@
             </div>
           </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/shikamaru.jpg" class="card-img-top rounded-5" alt="tatooed faced"></a>
@@ -160,7 +160,7 @@
               </div>
           </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/unnamed-11.png" class="card-img-top rounded-5" alt="Octopus hat"></a>
@@ -171,7 +171,7 @@
               </div>
           </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/1Bua2qtMxoVl_585x1170.jpg" class="card-img-top rounded-5" alt="Ribbon Head"></a>
@@ -182,7 +182,7 @@
             </div>
          </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/1_iS8lhECY5Eul2cBd8CucDQ-9e73e80e93715f32ad3a41cdd2f56e50-1024x1024.jpeg" class="card-img-top rounded-5" alt="Semibald"></a>
@@ -193,7 +193,7 @@
             </div>
          </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/blackred.jpg" class="card-img-top rounded-5" alt="black chun-li"></a>
@@ -204,7 +204,7 @@
             </div>
           </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/Samuraimask.jpg" class="card-img-top rounded-5" alt="Samurai Mask"></a>
@@ -215,7 +215,7 @@
             </div>
          </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/Soul_drool.jpg" class="card-img-top rounded-5" alt="Soul Drool"></a>
@@ -226,7 +226,7 @@
           </div>
        </div>
 
-      <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+      <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
                 <div class="card rounded-5 mt-5" >
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/ladysinbad.jpg" class="card-img-top rounded-5" alt="Blue skinned lady"></a>
@@ -237,7 +237,7 @@
           </div>
       </div>
 
-      <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+      <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
               <div class="card rounded-5 mt-5" >
                 <a href="https://opensea.io/collection/clonex" target="blank" >
               <img src="imgs/3pOvk2wp_400x400.jpg" class="card-img-top rounded-5" alt="Lizard Boy"></a>
@@ -248,7 +248,7 @@
           </div>
      </div>
 
-      <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+      <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
             <div class="card rounded-5 mt-5" >
               <a href="https://opensea.io/collection/clonex" target="blank" >
             <img src="imgs/1_KWde5bGqXqXyYCtK8nNbUQ-f3d60ba9000b5d2baf875364366c89fc-1024x1024.jpeg" class="card-img-top rounded-5" alt="Red Mask"></a>
@@ -259,7 +259,7 @@
         </div>
      </div>
 
-      <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+      <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
             <div class="card rounded-5 mt-5" >
               <a href="https://opensea.io/collection/clonex" target="blank" >
             <img src="imgs/3A9AHvSv.jpg" class="card-img-top rounded-5" alt="Boy with Halo"></a>
@@ -271,7 +271,7 @@
       </div>
 
     
-      <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+      <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
           <div class="card rounded-5 mt-5" >
             <a href="https://opensea.io/collection/clonex" target="blank" >
           <img src="imgs/unnamed.png" class="card-img-top rounded-5" alt="Titan in bucket hat"></a>
@@ -282,7 +282,7 @@
         </div>
       </div>
 
-      <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+      <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
           <div class="card rounded-5 mt-5" >
             <a href="https://opensea.io/collection/clonex" target="blank" >
           <img src="imgs/PSuc7TLn_400x400.jpg" class="card-img-top rounded-5" alt="School-Girl"></a>
@@ -293,7 +293,7 @@
       </div>
     </div>
 
-      <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+      <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
            <div class="card rounded-5 mt-5" >
             <a href="https://opensea.io/collection/clonex" target="blank" >
            <img src="imgs/clonex-7856.png" class="card-img-top rounded-5" alt="Girl in face-mask"></a>
@@ -304,7 +304,7 @@
         </div>
       </div>
 
-       <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+       <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
             <div class="card rounded-5 mt-5" >
               <a href="https://opensea.io/collection/clonex" target="blank" >
             <img src="imgs/18028.png" class="card-img-top rounded-5" alt="Robot dressed as a teenager"></a>
@@ -315,7 +315,7 @@
         </div>
       </div>
 
-        <div class=" col-xl-3 mb-3 d-flex justify-content-center">
+        <div class=" col-xl-3 col-6 mb-3 d-flex justify-content-center">
              <div class="card rounded-5 mt-5" >
               <a href="https://opensea.io/collection/clonex" target="blank" >
              <img src="imgs/CloneX-NFT-Avatars-Overview.png" class="card-img-top rounded-5" alt="Girl with Turban"></a>
@@ -474,18 +474,18 @@
           <div class="row bg-dark border-1 align-items-center rounded-5">
               <div class="col-xl-6 col-12 mt-5 mb-5 d-flex justify-content-center"><img src="imgs/takashi-murakami.jpg" class="societyimg img-fluid rounded-5"></div>
               <div class="col-xl-6 col-12 mt-5 mb-5 align-items-center">
-              <h1 class="mb-1"><span>Takashi Murakami</span></h1>
-              <p class="description fs-5">Known for his brightly colored and maniacally cheerful works, Takashi Murakami's astronomical rise to fame in the contemporary art world has been met with equal parts celebration and criticism. Murakami merges Japanese pop culture referents with the country's rich artistic legacy, effectively obliterating any distinction between commodity and high art. He is compared to Andy Warhol for his art-as-business approach, as well as for his large factories of workers who produce, market, and sell his art. His work draws inspiration from the Japanese subculture of otaku, which is replete with strange perversions of cuteness and innocence, as well as incredible violence. Through this, Murakami crafts a subtle critique of Japan's contemporary culture as well as the West's intruding influence upon it.</p>
+              <h1 class="mb-1 text-center"><span>Takashi Murakami</span></h1>
+              <p class="description fs-5 text-center">Known for his brightly colored and maniacally cheerful works, Takashi Murakami's astronomical rise to fame in the contemporary art world has been met with equal parts celebration and criticism. Murakami merges Japanese pop culture referents with the country's rich artistic legacy, effectively obliterating any distinction between commodity and high art. He is compared to Andy Warhol for his art-as-business approach, as well as for his large factories of workers who produce, market, and sell his art. His work draws inspiration from the Japanese subculture of otaku, which is replete with strange perversions of cuteness and innocence, as well as incredible violence. Through this, Murakami crafts a subtle critique of Japan's contemporary culture as well as the West's intruding influence upon it.</p>
             </div>
             <div class="col-xl-6 col-12 mt-5 mb-5 d-flex justify-content-around"><img src="imgs/lavel.jpg" class="societyimg img-fluid rounded-5"></div> 
             <div class="col-xl-6  col-12 mt-5 mb-5">
-              <h1 class="mb-5"><span>Lavell Crawford</span></h1>
-              <p class="description fs-5">An American comedian and actor. He is best known for playing Huell Babineaux in Breaking Bad (2011–2013) and its spin-off Better Call Saul (2017–2022). He also played the role of Gus Patch in the Netflix original movie The Ridiculous 6 (2015). What many of his fans know that he is a digital artist for quite some time now. One of his famous Works are the Weebz Rapper Collection which sold out 30 minutes after it was released to public.</p>
+              <h1 class="mb-1 text-center"><span>Lavell Crawford</span></h1>
+              <p class="description fs-5 text-center">An American comedian and actor. He is best known for playing Huell Babineaux in Breaking Bad (2011–2013) and its spin-off Better Call Saul (2017–2022). He also played the role of Gus Patch in the Netflix original movie The Ridiculous 6 (2015). What many of his fans know that he is a digital artist for quite some time now. One of his famous Works are the Weebz Rapper Collection which sold out 30 minutes after it was released to public.</p>
             </div>
                <div class="col-xl-6 mt-5 mb-5 d-flex justify-content-around"><img src="imgs/CHRISLE.png" class="societyimg img-fluid rounded-5"></div>
                 <div class="col-xl-6 mt-5 mb-5">
-                <h1 class="mb-5"><span>Chris Le</span></h1>
-                <p class="description fs-5 text-justify">Chris Le is a Salt Lake City, Utah based film director, VFX artist and graphic designer.<br> Starting at a young age, Le has worked his way up <br>in the music industry working on visuals with <br>artists such as The Game, Sean Kingston, Rick Ross, <br>Christina Milian, and many others. Le eventually moved into music videos, commercials and eventually, movies. Chris Le's first produced film, Zombie Hunter premiered at the Fantasia Film Festival. From there, Le's clientèle and portfolio grew as he started to direct his first feature film, Juarez 2045. Le also works in the game industry creating assets for Valve software's Dota 2 and Counter-Strike through the workshop program.</p>
+                <h1 class="mb-1 text-center"><span>Chris Le</span></h1>
+                <p class="description fs-5 text-center">Chris Le is a Salt Lake City, Utah based film director, VFX artist and graphic designer.<br> Starting at a young age, Le has worked his way up <br>in the music industry working on visuals with <br>artists such as The Game, Sean Kingston, Rick Ross, <br>Christina Milian, and many others. Le eventually moved into music videos, commercials and eventually, movies. Chris Le's first produced film, Zombie Hunter premiered at the Fantasia Film Festival. From there, Le's clientèle and portfolio grew as he started to direct his first feature film, Juarez 2045. Le also works in the game industry creating assets for Valve software's Dota 2 and Counter-Strike through the workshop program.</p>
               </div>
               <div class="col-xl-12 col-12 d-none d-sm-block">
                   <div class="d-grid mt-5 mb-5  text-center">
@@ -510,7 +510,6 @@
               <a href="https://discord.com/invite/rtfkt" target="blank">
               <button class="btn btn-outline-success" type="button">Join Discord</button></a>
             </div>
-
           </div>
           <div class="col-xl-6 text-center mt-5 mb-5"><img src="imgs/8d3426_3ad53d804a4744c1b9291f608851caec_mv2.gif" class="img-fluid rounded-5 societyimg"></div>
         </div>
