Modified html and css

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <!--HOME-->
 
     <section id="home" class="d-flex justify-content-center">
-        <div class="container-fluid">
+        <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-12 text-center "><h1 class="display-1 text-center mt-5" id="Mainheading"><br><span>Discover <br>and collect Rare NFT's</span></h1></div>
-                    <div class="col-xl-12  col-12 text-center d-none d-sm-block"><h2 id="subheading" class="mt-5 "><b><span>Digital marketplace for crypto collectibles and NFT's.<br>Buy, sell, and discover exclusive digital assets today.</span></b></h2></div>
+                    <div class="col-xl-12  col-12 text-center d-none d-sm-block"><h2 class="subheading mt-5"><b><span>Digital marketplace for crypto collectibles and NFT's.<br>Buy, sell, and discover exclusive digital assets today.</span></b></h2></div>
                      <div class="col-xl-12  col-12 text-center mt-5"> <img src="imgs/trunksbaldpurp-nft.png" class="img-fluid"  id="Homeimage" ></div>
-                     <div class="col-xl-12  col-12 text-center mb-5 d-flex justify-content-center fs-4" ><h1 id="halfdis">Get 50% Discount on your second purchase.</h1></div>
+                     <div class="col-xl-12  col-12 text-center mb-5 d-flex justify-content-center fs-4" ><h1 class="subheading"><span>Get 50% Discount on your second purchase.</span></h1></div>
                       
                       <div class="col-xl-12  col-12 text-center mb-5 d-flex justify-content-center">
                         <div class="d-grid gap-1">
@@ -68,7 +68,7 @@
 
         <!--About-->
   <section id="about" class="d-flex justify-content-center">          
-  <div class="container mt-5 mb-5">
+  <div class="container mb-5">
     <div class="divider"></div>
       <div class="row bg-dark rounded-5 align-items-center mt-5  d-flex justify-content-center" id="partners">
         <div class="col-xl-12 col-12 text-center mt-5"><h1 class="mt-5"><span>WHO WE ARE</span></h1></div>
