modified html and css

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-12 text-center "><h1 class="display-1 text-center mt-5" id="Mainheading"><br><span>Discover <br>and collect Rare NFT's</span></h1></div>
-                    <div class="col-xl-12  col-12 text-center d-none d-sm-block"><h2 class="subheading mt-5"><b><span>Digital marketplace for crypto collectibles and NFT's.<br>Buy, sell, and discover exclusive digital assets today.</span></b></h2></div>
-                     <div class="col-xl-12  col-12 text-center mt-5"> <img src="imgs/trunksbaldpurp-nft.png" class="img-fluid"  id="Homeimage" ></div>
-                     <div class="col-xl-12  col-12 text-center mb-5 d-flex justify-content-center fs-4" ><h1 class="subheading"><span>Get 50% Discount on your second purchase.</span></h1></div>
+                    <div class="col-xl-12  col-12 text-center d-none d-sm-block"><p class="subheading mt-5"><b><span>Digital marketplace for crypto collectibles and NFT's.<br>Buy and discover exclusive digital assets today.</span></b></p></div>
+                     <div class="col-xl-12  col-12 text-center d-flex justify-content-center fs-4" ><h1 class="subheading2 mt-5"><span>Get 50% Discount on your second purchase.</span></h1></div>
                       
                       <div class="col-xl-12  col-12 text-center mb-5 d-flex justify-content-center">
-                        <div class="d-grid gap-1">
-                          <button class="btn btn-outline-success d-block d-sm-none align-items-center" type="submit" id="buynowbtnxs">Buy Now !</button>
+                        <div class="d-grid gap-1"><a href="#wallet">
+                          <button class="btn btn-outline-success d-block d-sm-none align-items-center" type="submit" id="buynowbtnxs">Buy Now !</button></a>
+                          <a href="#wallet">
                           <button class="btn walletbtn btn-outline-light d-block d-sm-none" type="submit">Wallet</button></a>
                         </div>
-                        <button class="btn buynowbtn btn-outline-succes d-none d-sm-block" type="submit">Buy Now !</button>
-                        <button class="btn walletbtn btn-outline-light d-none d-sm-block" type="submit">Wallet</button></div>
+                        <a href="#wallet"><button class="btn buynowbtn btn-outline-succes d-none d-sm-block" type="submit">Buy Now !</button></a>
+                        <a href="#wallet"><button class="btn walletbtn btn-outline-light d-none d-sm-block" type="submit">Wallet</button></a></div>
 
                   </div>
         </div>
