Modified html and css

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                    </div>  
                  </div>
                  <div class="col-xl-6 mb-5 "><h1 class=" mt-5 mb-2 text-center">The Almusal Collection</h1>
-                <p class="description fs-5 mb-5 text-center"> is a  lovingly crafted, unique, and colorful action-arcade game turned nft with its unique hand drawn techniques.
+                <p class="description fs-5 mb-5 text-center"> A lovingly crafted, unique, and colorful action-arcade game turned nft with its unique hand drawn techniques.
                   <br>Can be used as a playable character in Onimal Crossing.
                 </p>
                 <div class="col-xl-12 mb-3 d-flex justify-content-center">
