Modified html and css, added font

--- a/index.html
+++ b/index.html
@@ -44,14 +44,12 @@
     </nav>
 
     <!--HOME-->
-
     <section id="home" class="d-flex justify-content-center">
         <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-12 text-center "><h1 class="display-1 text-center mt-5" id="Mainheading"><br><span>Discover <br>and collect Rare NFT's</span></h1></div>
-                    <div class="col-xl-12  col-12 text-center d-none d-sm-block"><p class="subheading mt-5"><b><span>Digital marketplace for crypto collectibles and NFT's.<br>Buy and discover exclusive digital assets today.</span></b></p></div>
-                     <div class="col-xl-12  col-12 text-center d-flex justify-content-center fs-4" ><h1 class="subheading2 mt-5"><span>Get 50% Discount on your second purchase.</span></h1></div>
-                      
+                    <div class="col-xl-12  col-12 text-center d-none d-sm-block"><h3 class="subheading mt-5"><b><span>Digital marketplace for crypto collectibles and NFT's.<br>Buy and discover exclusive digital assets today.</span></b></h3></div>
+                     <div class="col-xl-12  col-12 text-center d-flex justify-content-center fs-4 mb-3"><h1 class="subheading2 mt-5"><span>Get 50% Discount on your second purchase.</span></h1></div>                     
                       <div class="col-xl-12  col-12 text-center mb-5 d-flex justify-content-center">
                         <div class="d-grid gap-1"><a href="#wallet">
                           <button class="btn btn-outline-success d-block d-sm-none align-items-center" type="submit" id="buynowbtnxs">Buy Now !</button></a>
@@ -63,6 +61,7 @@
 
                   </div>
         </div>
+
     </section>
 
 
@@ -72,14 +71,13 @@
     <div class="divider"></div>
       <div class="row bg-dark rounded-5 align-items-center mt-5  d-flex justify-content-center" id="partners">
         <div class="col-xl-12 col-12 text-center mt-5"><h1 class="mt-5"><span>WHO WE ARE</span></h1></div>
-        <div class="col-xl-12 col-12 mt-5 mb-5 text-start"><p class="aboutus fs-2 text-center"><span>We are a team of content creator.<br> WEEBZ uses the latest in game engines, NFT, blockchain authentication and augmented reality,<br> combined with manufacturing expertise to create one of a kind digital artifacts.
-        </span>
+        <div class="col-xl-12 col-12 mt-5 mb-5 text-start"><p class="aboutus fs-2 text-center">We are a team of content creator.<br> WEEBZ uses the latest in game engines, NFT, blockchain authentication and augmented reality,<br> combined with manufacturing expertise to create one of a kind digital artifacts.
         </p></div>
     </div>
     <div class="row mt-5">
         <div class="col-xl-12">
             <div class="row  rounded-5 align-items-center mt-5" id="partners">
-                <div class="col-xl-12 col-12"><h2 class="aboutus mt-5 text-center"><span>AWESOME PEOPLE WE WORKED WITH</span></h2></div>
+                <div class="col-xl-12 col-12"><p class="aboutus1 mt-5 text-center"><span>AWESOME PEOPLE WE WORKED WITH</span></p></div>
                 <div class="col-xl-4 col-4 text-center mb-1"><a href="https://www.nintendo.com/" target="blank"><img src="imgs/Nintendo_red_logo.svg-removebg-preview.png" class="img-fluid worked-with"></a></div>
                 <div class="col-xl-4 col-4 text-start mb-1"><a href="https://www.coca-colacompany.com/" target="blank"><img src="imgs/Coca-Cola_logo.svg.png" class="img-fluid worked-with"></a></div>
                 <div class="col-xl-4 col-4 text-end mb-1"><a href="https://www.bandai.com/" target="blank"><img src="imgs/bandai-bandai-logo-png-removebg-preview.png" class="img-fluid worked-with"></a></div>
@@ -354,12 +352,9 @@
                  </div>
                  <div class="col-xl-6 mb-5 "><h1 class=" mt-5 mb-2 text-center">The Almusal Collection</h1>
                 <p class="description fs-5 mb-5 text-center"> A lovingly crafted, unique, and colorful action-arcade game turned nft with its unique hand drawn techniques.
-                  <br>Can be used as a playable character in Onimal Crossing.
-                </p>
-                <div class="col-xl-12 mb-3 d-flex justify-content-center">
+                  <br>Can be used as a playable character in Onimal Crossing.<br>
                 <a href="https://store.steampowered.com/app/1980260/BEWBEWBEW/" target="blank"> 
-                <button class="btn buynowbtn btn-outline-success align-items-center text-center mb-3" type="submit">Buy Now !</button></a>
-              </div>
+                <button class="btn buynowbtn btn-outline-success align-items-center text-center mt-3" type="submit">Buy Now!</button></a> </p>
                     </div>    
                   </div>
 
@@ -474,18 +469,18 @@
           <div class="row bg-dark border-1 align-items-center rounded-5">
               <div class="col-xl-6 col-12 mt-5 mb-5 d-flex justify-content-center"><img src="imgs/takashi-murakami.jpg" class="societyimg img-fluid rounded-5"></div>
               <div class="col-xl-6 col-12 mt-5 mb-5 align-items-center">
-              <h1 class="mb-1 text-center"><span>Takashi Murakami</span></h1>
-              <p class="description fs-5 text-center">Known for his brightly colored and maniacally cheerful works, Takashi Murakami's astronomical rise to fame in the contemporary art world has been met with equal parts celebration and criticism. Murakami merges Japanese pop culture referents with the country's rich artistic legacy, effectively obliterating any distinction between commodity and high art. He is compared to Andy Warhol for his art-as-business approach, as well as for his large factories of workers who produce, market, and sell his art. His work draws inspiration from the Japanese subculture of otaku, which is replete with strange perversions of cuteness and innocence, as well as incredible violence. Through this, Murakami crafts a subtle critique of Japan's contemporary culture as well as the West's intruding influence upon it.</p>
+              <h1 class="mb-5 text-center"><span>Takashi Murakami</span></h1>
+              <p class="description text-center mt-5">Known for his brightly colored and maniacally cheerful works, Takashi Murakami's astronomical rise to fame in the contemporary art world has been met with equal parts celebration and criticism. Murakami merges Japanese pop culture referents with the country's rich artistic legacy, effectively obliterating any distinction between commodity and high art. He is compared to Andy Warhol for his art-as-business approach, as well as for his large factories of workers who produce, market, and sell his art. His work draws inspiration from the Japanese subculture of otaku, which is replete with strange perversions of cuteness and innocence, as well as incredible violence. Through this, Murakami crafts a subtle critique of Japan's contemporary culture as well as the West's intruding influence upon it.</p>
             </div>
             <div class="col-xl-6 col-12 mt-5 mb-5 d-flex justify-content-around"><img src="imgs/lavel.jpg" class="societyimg img-fluid rounded-5"></div> 
             <div class="col-xl-6  col-12 mt-5 mb-5">
-              <h1 class="mb-1 text-center"><span>Lavell Crawford</span></h1>
-              <p class="description fs-5 text-center">An American comedian and actor. He is best known for playing Huell Babineaux in Breaking Bad (2011–2013) and its spin-off Better Call Saul (2017–2022). He also played the role of Gus Patch in the Netflix original movie The Ridiculous 6 (2015). What many of his fans know that he is a digital artist for quite some time now. One of his famous Works are the Weebz Rapper Collection which sold out 30 minutes after it was released to public.</p>
+              <h1 class="mb-5 text-center"><span>Lavell Crawford</span></h1>
+              <p class="description text-center">An American comedian and actor. He is best known for playing Huell Babineaux in Breaking Bad (2011–2013) and its spin-off Better Call Saul (2017–2022). He also played the role of Gus Patch in the Netflix original movie The Ridiculous 6 (2015). What many of his fans know that he is a digital artist for quite some time now. One of his famous Works are the Weebz Rapper Collection which sold out 30 minutes after it was released to public.</p>
             </div>
                <div class="col-xl-6 mt-5 mb-5 d-flex justify-content-around"><img src="imgs/CHRISLE.png" class="societyimg img-fluid rounded-5"></div>
                 <div class="col-xl-6 mt-5 mb-5">
-                <h1 class="mb-1 text-center"><span>Chris Le</span></h1>
-                <p class="description fs-5 text-center">Chris Le is a Salt Lake City, Utah based film director, VFX artist and graphic designer.<br> Starting at a young age, Le has worked his way up <br>in the music industry working on visuals with <br>artists such as The Game, Sean Kingston, Rick Ross, <br>Christina Milian, and many others. Le eventually moved into music videos, commercials and eventually, movies. Chris Le's first produced film, Zombie Hunter premiered at the Fantasia Film Festival. From there, Le's clientèle and portfolio grew as he started to direct his first feature film, Juarez 2045. Le also works in the game industry creating assets for Valve software's Dota 2 and Counter-Strike through the workshop program.</p>
+                <h1 class="mb-5 text-center"><span>Chris Le</span></h1>
+                <p class="description  text-center">Chris Le is a Salt Lake City, Utah based film director, VFX artist and graphic designer.<br> Starting at a young age, Le has worked his way up <br>in the music industry working on visuals with <br>artists such as The Game, Sean Kingston, Rick Ross,Christina Milian, and many others. Le eventually moved into music videos, commercials and eventually, movies. Chris Le's first produced film, Zombie Hunter premiered at the Fantasia Film Festival. From there, Le's clientèle and portfolio grew as he started to direct his first feature film, Juarez 2045. Le also works in the game industry creating assets for Valve software's Dota 2 and Counter-Strike through the workshop program.</p>
               </div>
               <div class="col-xl-12 col-12 d-none d-sm-block">
                   <div class="d-grid mt-5 mb-5  text-center">
@@ -508,7 +503,7 @@
             <h1 class="display-6 mt-5 mb-5" id="joindc"><span>Join our Discord and<br>participate in the next<br>WEEBZ creator contest</span></h1>
             <div class="d-grid mt-5 mb-5  text-center">
               <a href="https://discord.com/invite/rtfkt" target="blank">
-              <button class="btn btn-outline-success" type="button">Join Discord</button></a>
+              <button class="btndiscord btn-outline-success" type="button">Join Discord</button></a>
             </div>
           </div>
           <div class="col-xl-6 text-center mt-5 mb-5"><img src="imgs/8d3426_3ad53d804a4744c1b9291f608851caec_mv2.gif" class="img-fluid rounded-5 societyimg"></div>
@@ -565,8 +560,8 @@
                     <label class="form-check-label" for="check">Remember me</label>
                         </div>
                     <input class="btn btn-success w-100 mb-3" type="submit" value="SIGN IN">
-                    <input class="btn btn-primary w-100 mb-3" type="submit" value="SIGN IN USING METAMASK">
-                    <input class="btn btn-warning w-100 mb-3" type="submit" value="SIGN IN USING BINANCE">
+                    <input class="btn btn-primary w-100 mb-3" type="submit" value="SIGN IN WITH METAMASK">
+                    <input class="btn btn-warning w-100 mb-3" type="submit" value="SIGN IN WITH BINANCE">
                     </form>
   
           </div>
@@ -577,9 +572,9 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-xl-8 col-12 mt-5"><h1 id="logo2"><span>WEEBZ</span></h1>
-        <p class="fs-4">We are an organization led by creators. WEEBZ creates one-of-a-kind<br/> digital artifacts by combining cutting-edge game engines, NFT,<br/> blockchain authentication, and augmented reality with manufacturing expertise.</p>
+        <p class="footer-description">We are an organization led by creators. WEEBZ creates one-of-a-kind<br/> digital artifacts by combining cutting-edge game engines, NFT,<br/> blockchain authentication, and augmented reality with manufacturing expertise.</p>
       </div>
-      <div class="col-xl-2 col-12 mt-4">
+      <div class=" footer-list col-xl-2 col-12">
         <ul class="footer text-start fs-5">
             <li class="footer-item d-none d-sm-block"><a href="#" target="blank">FAQ</a></li>
             <li class="footer-item d-none d-sm-block"><a href="#" target="blank">Legal Overview</a></li>
@@ -592,7 +587,7 @@
             <li class="footer-item text-center d-block d-sm-none"><a href="#" target="blank">Terms & Conditions</a></li>
             <li class="footer-item text-center d-block d-sm-none"><a href="#" target="blank">Press Info</a></li>
         </ul></div>
-      <div class="col-xl-2 col-12 mt-5">   
+      <div class="footer-list col-xl-2 col-12">   
         <ul class="footer text-start fs-5"> 
         <li class="footer-item d-none d-sm-block"><a href="#" target="blank">Facebook</a></li>
         <li class="footer-item d-none d-sm-block"><a href="#" target="blank">Instagram</a></li>
