modify css and html, modified responsive view

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/unnamed-11.png" class="card-img-top rounded-5" alt="Octopus hat"></a>
                 <div class="card-body rounded-5">
-                <h5 class="card-title">Psychidelic Squid</h5>
+                <h5 class="card-title">Kwazy Squid</h5>
                 <p class="card-text">1/20</p>
                 </div>
               </div>
@@ -174,7 +174,7 @@
                   <a href="https://opensea.io/collection/clonex" target="blank" >
                 <img src="imgs/1Bua2qtMxoVl_585x1170.jpg" class="card-img-top rounded-5" alt="Ribbon Head"></a>
                 <div class="card-body rounded-5">
-                <h5 class="card-title">Tsundare Cutie</h5>
+                <h5 class="card-title">Gyaru Cutie</h5>
                 <p class="card-text">1/5</p>
               </div>
             </div>
@@ -251,7 +251,7 @@
               <a href="https://opensea.io/collection/clonex" target="blank" >
             <img src="imgs/1_KWde5bGqXqXyYCtK8nNbUQ-f3d60ba9000b5d2baf875364366c89fc-1024x1024.jpeg" class="card-img-top rounded-5" alt="Red Mask"></a>
             <div class="card-body rounded-5">
-            <h5 class="card-title">Thriller Fever </h5>
+            <h5 class="card-title">Thrilla Fever </h5>
             <p class="card-text">1/50</p>
           </div>
         </div>
@@ -326,7 +326,7 @@
 
         <div class="d-grid mt-5 mb-5  text-center d-none d-sm-block">
           <a href="https://opensea.io/collection/clonex" target="blank" >
-          <button class="btn2 btn-outline-success" type="button">See More</button></a>
+          <button class="btn2 btn-outline-success" type="button">SEE MORE</button></a>
         </div>
 
         <div class="d-grid mt-5 mb-5 d-flex justify-content-around d-block d-sm-none">
